--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "fls-start",
+	"name": "start-template",
 	"version": "3.0.0",
 	"description": "Start template with Gulp and Webpack",
-	"author": "FLS",
+	"author": "user",
 	"private": true,
 	"license": "",
 	"type": "module",
